--- a/mi_tercer_tema.html
+++ b/mi_tercer_tema.html
@@ -126,19 +126,19 @@
             
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+                <span>El deportista mbappe rechaza contrato millonario del psg</span>
             </div>
             <!-- termina entrada de mircoblogging -->
 
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+                <span>Eljugador de basquetballmejor pagado es lebron james</span>
             </div>
             <!-- termina entrada de mircoblogging -->
             
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+                <span>Macgregor es anunciadocomo el,deportista mejor pagado</span>
             </div>
             <!-- termina entrada de mircoblogging -->
             </aside>
