--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -131,6 +131,25 @@
                 </article>
         </main>
             <aside>
+                <h2>Microbloging</h2>
+            
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
+
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
+            
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
             </aside>
     <footer id="footer_blog">
         <div></div>
