--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -135,19 +135,19 @@
             
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+                <span>El futbol es eldeporte más visualizado de todo el mundo</span>
             </div>
             <!-- termina entrada de mircoblogging -->
 
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+                <span>Los deportes son el mejor antidepresivo</span>
             </div>
             <!-- termina entrada de mircoblogging -->
             
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores quisquam obcaecati impedit distinctio?</span>
+                <span>Los deportes nos ayudan a tener más años de vida por que nos dan muvha más salud</span>
             </div>
             <!-- termina entrada de mircoblogging -->
             </aside>
