--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -135,19 +135,31 @@
             
             <!--  entrada de mircoblogging -->
             <div>
-                <span>El futbol es eldeporte más visualizado de todo el mundo</span>
+                <span>El futbol es el mejor antidepresivo</span>
             </div>
             <!-- termina entrada de mircoblogging -->
 
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Los deportes son el mejor antidepresivo</span>
+                <span>En los deportes puedes encontrar amigos muy importantes y conocer gente nueva</span>
             </div>
             <!-- termina entrada de mircoblogging -->
             
             <!--  entrada de mircoblogging -->
             <div>
-                <span>Los deportes nos ayudan a tener más años de vida por que nos dan muvha más salud</span>
+                <span>Mientras mas deportes realizas un ,ejor estilo de vida tienes</span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
+
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>El salón de la fama sirve para inmortalizar la imagen de los mejores deportistas de todos los tiempos</span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
+
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>Los deportes influyen demasiado en la gente una vez se paro la guerra para jugar futbol</span>
             </div>
             <!-- termina entrada de mircoblogging -->
             </aside>
