--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -141,13 +141,13 @@
                     <!-- inicia contenido del artículo -->
                     <div>
                         
-                        
+                        <h3>El ejercicio como antidepresivo</h3>
                         <p>el ejercicio estimula la secreción de endorfinas, conocidas popularmente como las hormonas de la felicidad, y su efecto sería más rápido que el puede lograr la medicación, según algunos científicos.</p>
                         <p>El ejercicio tiene un gran potencial en el tratamiento de la depresión. No existe un consenso respecto a cuál es el tipo más adecuado o la intensidad, pero mejora a todos los niveles: aumenta los niveles de endorfinas, mejora la autoestima, la planificación, ayuda a centrarse, mejora el humor, el contacto social</p>
                         <p>La práctica de ejercicio físico produce a largo plazo un incremento de los niveles de noradrenalina, implicada en la respuesta del organismo al estrés, y de serotonina. El aumento de los niveles de serotonina a nivel cerebral puede contribuir a mejorar nuestro estado de ánimo y a reducir la ansiedad.</p>
                         <!-- inicia ilustración del artículo -->
                         <figure>
-                            <img src="assets/images/ilustracion_1.jpg" alt="ilustracion 1º artículo" height="600px" width="auto">
+                            <img src="assets/images/semana 8meme.jpg" alt="ilustracion 1º artículo" height="600px" width="auto">
                             <figcaption>Texto de descripción de mi ilustración.</figcaption>
                         </figure>
                         <!-- termina ilustración del artículo -->
