--- a/mi_tercer_tema.html
+++ b/mi_tercer_tema.html
@@ -141,6 +141,18 @@
                 <span>Macgregor es anunciado como el,deportista mejor pagado</span>
             </div>
             <!-- termina entrada de mircoblogging -->
+
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>Los deportistas influyen en elactuar de la gente</span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
+
+            <!--  entrada de mircoblogging -->
+            <div>
+                <span>Los deportistas tienen que cuidar su alimentacion </span>
+            </div>
+            <!-- termina entrada de mircoblogging -->
             </aside>
     <footer id="footer_blog">
         <div></div>
