--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -38,7 +38,7 @@
                             <p>No son solo un entretenimento son un estilo de vida mas saludable</p>
                            
                             <p>El ejercicio lleva sangre, oxígeno y nutrientes al cerebro, lo cual mejora su funcionamiento, calma el estrés, disminuye los niveles de ansiedad y mejora tu estado de ánimo. Pero estos no son los únicos beneficios ya que, al hacer deporte, puedes reducir tus niveles de grasa corporal y mantenerte sano.</p>    
-                            <img src="assets/images/depoooooor.jpg" alt="Deportes" height="500px" width="auto">
+                            <img src="assets/images/depoooooor.jpg" alt="Deportes" height="autopx" width="850px">
                         
                              </figure>
 
