--- a/mi_tercer_tema.html
+++ b/mi_tercer_tema.html
@@ -38,6 +38,12 @@
                             <p>Estos es aprox lo que gana un buen deportista: Medallistas en Campeonatos del Mundo y en Juegos Olímpicos: 30.000 euros brutos al año durante 24 meses. Finalistas en Juegos Olímpicos y Campeonatos del Mundo, medallistas en Campeonatos de Europa: 19.200 euros brutos al año durante 18 meses</p>
                             <p>Segun la displina que practiquen o la influencia que tienen sube o baja su sueldo y tambien que tan polemico sean</p>    
                              </figure>
+            <!-- inicia ilustración del artículo -->
+            <figure>
+                <img src="assets/images/descarga.jpg" alt="ilustracion 1º artículo" height="auto" width="600px">
+                
+            </figure>
+         <!-- termina ilustración del artículo -->                   
 
 
                     </div>
