--- a/mi_tercer_tema.html
+++ b/mi_tercer_tema.html
@@ -19,9 +19,9 @@
 </nav>
     <section>
         
-    <header>
-        
-    </header>
+        <header>
+            <h1 id="titulo_del_blog"><img src="assets/images/123.png" alt="jkygyu" height="40px" width="auto">Salarios en los  deportistas</h1>
+        </header>
         <main>
             <article>
                         <header>
