--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -11,8 +11,8 @@
     <ul>
         <li ><a class="resaltado" href="index.html" target="_blank">Principal</a></li>
         <li><a href="http://deportes/en/su/totalidad.com" target="_blank">deportes en su totalidad</a></li>
-        <li><a href="mi_segundo_tema.html">ropa deportiva/<a></li>
-        <li><a href="mi_tercer_tema.html">deportistas con mejores salarios/<a></li>
+        <li><a href="mi_segundo_tema.html">ropa deportiva<a></li>
+        <li><a href="mi_tercer_tema.html">deportistas con mejores salarios<a></li>
         <li><a href="mi_cuarto_tema.html">deportes de alto riesgo</a></li>
         
     </ul>
