--- a/mi_primer_tema.html
+++ b/mi_primer_tema.html
@@ -170,7 +170,7 @@
                         <!-- fin datos del autor -->
                         <!-- bibliografía -->
                         <blockquote>
-                            <p>Se anota primero el apellido del autor(es), seguido por el año que va entre paréntesis, a continuación la cita entre comillas y finalmente, entre paréntesis también, la página de donde se tomó la cita.</p>
+                            <p></p>
                         </blockquote>
                         <!-- fin bibliografía -->
                     </footer>
@@ -210,19 +210,20 @@
             </div>
             <!-- termina entrada de mircoblogging -->
             </aside>
-    <footer id="footer_blog">
-        
+            <footer id="footer_blog">
+                <div>
+                    <span>Carlos Pesquera</span>
 
-                    <div>
-                        <p>Carlos Pesquera García</p>
-                        <blockquote>
-                            <p>Se anota primero el apellido del autor(es), seguido por el año que va entre paréntesis, a continuación la cita entre comillas y finalmente, entre paréntesis también, la página de donde se tomó la cita.</p>
-                        </blockquote>
-                        <span>Blog creado en <i>Colegio Álamos</i></span>
-                        <p>https://www.instagram.com/?hl=es-la</p>
-                        <span>Las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
-                    </div>
-                    </footer>
-            </section>
+                </div>
+                <div>
+                    <span> blog creado en el <i>colegio alamos</i> </span>
+                    <span> las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
+                </div>
+                <div>
+                    <span> María Maldonado</span>
+                </div>
+
+            </footer>
+    </section>
 </body>
 </html>
