--- a/mi_tercer_tema.html
+++ b/mi_tercer_tema.html
@@ -160,25 +160,59 @@
             </div>
             <!-- termina entrada de mircoblogging -->
             </aside>
-    <footer id="footer_blog">
-        <div></div>
-                    <div>
-                <figure>
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=2gB-w-pf2wI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <figcaption><a href="https://youtu.be/RqMyNptLkpg"target="_blank">Mi video de you tube</a></figcaption>
-                    </figure>
-                    </div>
-                    <div>
-                        <p>Carlos Pesquera García</p>
-                        <blockquote>
-                            <p>Se anota primero el apellido del autor(es), seguido por el año que va entre paréntesis, a continuación la cita entre comillas y finalmente, entre paréntesis también, la página de donde se tomó la cita.</p>
-                        </blockquote>
-                        <span>Blog creado en <i>Colegio Álamos</i></span>
-                        <p>https://www.instagram.com/?hl=es-la</p>
-                        <span>Las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
-                    </div>
+     <!-- inicia contenido del artículo -->
+     <div>
+                        
+        <h3>Salarios de Jugadores</h3>
+        <p>el ejercicio estimula la secreción de endorfinas, conocidas popularmente como las hormonas de la felicidad, y su efecto sería más rápido que el puede lograr la medicación, según algunos científicos.</p>
+        <p>El ejercicio tiene un gran potencial en el tratamiento de la depresión. No existe un consenso respecto a cuál es el tipo más adecuado o la intensidad, pero mejora a todos los niveles: aumenta los niveles de endorfinas, mejora la autoestima, la planificación, ayuda a centrarse, mejora el humor, el contacto social</p>
+        <p>La práctica de ejercicio físico produce a largo plazo un incremento de los niveles de noradrenalina, implicada en la respuesta del organismo al estrés, y de serotonina. El aumento de los niveles de serotonina a nivel cerebral puede contribuir a mejorar nuestro estado de ánimo y a reducir la ansiedad.</p>
+        <!-- inicia ilustración del artículo -->
+        <figure>
+            <img src="assets/images/semana 8meme.jpg" alt="ilustracion 1º artículo" height="600px" width="auto">
+            <figcaption>Texto de descripción de mi ilustración.</figcaption>
+        </figure>
+        <!-- termina ilustración del artículo -->
 
-                    </footer>
-            </section>
+    </div>
+    <!-- Termina contenido del artículo -->
+    
+    <footer>
+        <!-- Datos del autor -->
+        <div>
+            <span>Carlos Pesquera García</span> <a href="http://miredsocial.com/nombredelautor" target="_blank">https://www.instagram.com/?hl=es-la</a>
+        </div>
+        <!-- fin datos del autor -->
+        <!-- bibliografía -->
+        <blockquote>
+            <p></p>
+        </blockquote>
+        <!-- fin bibliografía -->
+    </footer>
+</article>
+<!-- fin entrada: nombre_del_artículo -->
+
+
+<!--  entrada de mircoblogging -->
+<div>
+<span>Los deportes influyen demasiado en la gente una vez se paro la guerra para jugar futbol</span>
+</div>
+<!-- termina entrada de mircoblogging -->
+</aside>
+<footer id="footer_blog">
+<div>
+    <span>Carlos Pesquera</span>
+
+</div>
+<div>
+    <span> blog creado en el <i>colegio alamos</i> </span>
+    <span> las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
+</div>
+<div>
+    <span> María Maldonado</span>
+</div>
+
+</footer>
+</section>
 </body>
 </html>
